Finish page css for cta and footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
 #title {
   background-color: #FF4C68;
   color: #fff;
+
 }
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 3.5rem;  line-height: 1.5;  font-weight: 900;}
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 body {
@@ -44,7 +45,9 @@ body {
 .title-image {
   width: 60%;
   transform:rotate(25deg);
-
+  position:absolute;
+  z-index:0;
+  right:30%;
 }
 
 /* Features */
@@ -59,8 +62,15 @@ h3 {
 .feature-icon:hover{
   color: #ff4c68;
 }
+.phone-image {
+
+}
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
+  z-index: 1;
+
 }
 .feature-box {
   text-align: center;
@@ -103,4 +113,45 @@ h2 {
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+/* CALL TO ACTION */
+#cta {
+  background-color: #FF4C68;
+  color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+.cta-heading {
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3.5rem;
+  line-height: 1.5;
+
+}
+
+/* FOOTER */
+#footer {
+  text-align: center;
+  padding: 7% 15%;
+}
+
+@media (max-width: 1028px) {
+  .title-image {
+    position:static;
+    transform: rotate(0);
+  }
+  #title {
+    text-align: center;
+  }
 }
